fix(data-grid): fix progress z-index

--- a/projects/extensions/data-grid/grid.component.scss
+++ b/projects/extensions/data-grid/grid.component.scss
@@ -8,7 +8,7 @@
   .mtx-grid-progress {
     position: absolute;
     top: 0;
-    z-index: 100;
+    z-index: 120;
   }
 
   .mtx-grid-toolbar {
